welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : String("0")
 required: Int
if(isBirthday == "true") return ("0");
                                 ^caughtSpeeding:5: error: type mismatch;
 found   : String("0")
 required: Int
if(speed < 60 ) return ("0");
                        ^caughtSpeeding:6: error: type mismatch;
 found   : String("1")
 required: Int
if(speed < 80 && speed > 61 ) return ("1");
                                      ^caughtSpeeding:7: error: type mismatch;
 found   : String("2")
 required: Int
if(speed > 81 ) return ("2");
                        ^caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
if(speed > 81 ) return ("2");
^